crates/pixi_manifest/src/snapshots/pixi_manifest__document__tests__nameless_to_toml.snap
---
source: crates/pixi_manifest/src/document.rs
expression: table
---
"rattler >=1" = ">=1"
"conda-forge::rattler" = { channel = "conda-forge", version = "*" }
"conda-forge::rattler[version=>3.0]" = { version = ">3.0", channel = "conda-forge" }
"rattler 1 *cuda" = { version = "==1", build = "*cuda" }
"rattler >=1 *cuda" = { version = ">=1", build = "*cuda" }
"https://conda.anaconda.org/conda-forge/linux-64/_libgcc_mutex-0.1-conda_forge.tar.bz2" = { url = "https://conda.anaconda.org/conda-forge/linux-64/_libgcc_mutex-0.1-conda_forge.tar.bz2" }
"/home/user/conda-bld/linux-64/_libgcc_mutex-0.1-conda_forge.tar.bz2" = { url = "file:///home/user/conda-bld/linux-64/_libgcc_mutex-0.1-conda_forge.tar.bz2" }
"C:\\Users\\user\\conda-bld\\linux-64\\foo-1.0-py27_0.tar.bz2" = { url = "file:///C:/Users/user/conda-bld/linux-64/foo-1.0-py27_0.tar.bz2" }
