crates/pixi_manifest/src/snapshots/pixi_manifest__document__tests__test_remove_environment_pyproject.toml.snap
---
source: crates/pixi_manifest/src/document.rs
assertion_line: 626
expression: source.to_string()
---
[tool.pixi.environments]
bar = ["default"]
